--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -1,6 +1,6 @@
-<mat-expansion-panel class="mb-5" *ngIf="isGlobalAdmin">
+<mat-expansion-panel class="mb-2" *ngIf="isGlobalAdmin">
     <mat-expansion-panel-header>
-        <mat-panel-title class="nav-item py-2">
+        <mat-panel-title class="nav-item">
             <p class="nav-item ml-2">{{'NAV.ADMIN' | translate}}</p>
         </mat-panel-title>
         <!-- <mat-panel-description></mat-panel-description> -->
@@ -13,14 +13,14 @@
             </a>
             <fa-icon [icon]="faUsers" class="navbar-icon"></fa-icon>
         </li>
-        <li class="nav-item py-2">
+        <li class="nav-item">
             <a routerLink="/admin/permissions" routerLinkActive="active"
                 class="nav-link pl-5 position-relative rounded">
                 {{'NAV.PERMISSIONS' | translate}}
             </a>
             <fa-icon [icon]="faIdBadge" class="navbar-icon"></fa-icon>
         </li>
-        <li class="nav-item py-2">
+        <li class="nav-item">
             <a routerLink="/admin/organisations" routerLinkActive="active"
                 class="nav-link pl-5 position-relative rounded">
                 {{'NAV.ORGANISATIONS' | translate}}
