--- a/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
+++ b/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
@@ -49,9 +49,7 @@
                         *ngIf="relation.payloadDecoder; else noDecoder">
                         <a [routerLink]="['/payload-decoder/payload-decoder-detail/', relation.payloadDecoder.id]">{{relation.payloadDecoder.name}}</a>
                       </span>
-                      <ng-template #noDecoder>
-                        {{ 'DATATARGET.NO-PAYLOADDECODER' | translate}}
-                      </ng-template>
+                      <ng-template #noDecoder>{{ 'DATATARGET.NO-PAYLOADDECODER' | translate}}</ng-template>
                     </p>
                   </div>
                   <div class="col-md-1 d-flex align-items-center justify-content-center">
