--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -31,27 +31,24 @@
                                     </ul>
                                 </div>
                                 <div class="col-md-6 px-md-4">
-                                    <p><strong>Community</strong></p>
+                                    <p><strong>{{'DASHBOARD.SUB-HEADER-1' | translate}}</strong></p>
                                     <p>{{'DASHBOARD.WELCOME-MESSAGE' | translate}}<span><a
-                                                href="https://OS2iot.os2.eu">OS2iot.os2.eu</a></span>{{'DASHBOARD.WELCOME-MESSAGE-3' | translate}}
+                                                href="https://OS2iot.os2.eu">{{'DASHBOARD.LINK-1' |
+                                                translate}}</a></span>{{'DASHBOARD.WELCOME-MESSAGE-3' | translate}}
                                     </p>
-                                    <p><strong>Om OS2IOT</strong></p>
+                                    <p><strong>{{'DASHBOARD.SUB-HEADER-2' | translate}}</strong></p>
                                     <p>{{'DASHBOARD.WELCOME-MESSAGE-2' | translate}}<span><a
-                                                href="https://os2.eu/produkt/os2iot">løsningens produktside</a></span>
+                                                href="https://os2.eu/produkt/os2iot">{{'DASHBOARD.LINK-2' |
+                                                translate}}</a></span>
                                     </p>
                                 </div>
                             </div>
                         </span>
                     </h1>
-                    <div class="row">
+                    <div class="row my-5" *ngIf="isGlobalAdmin">
                         <div class="col-12 d-flex justify-content-center">
-                    <div class="row mt-5" *ngIf="isGlobalAdmin">
-                        <div class="col-12 d-flex justify-content-center">
-                    <div class="row mt-5">
-                        <div
-                            class="col-12 d-flex justify-content-center justify-content-md-start justify-content-lg-center ">
                             <a [routerLink]="['/admin/organisations']" routerLinkActive="router-link-active"
-                                class="btn btn-primary btn--animated">Start med at oprette en organisation</a>
+                                class="btn btn-primary btn--animated">{{'DASHBOARD.BUTTON' | translate}}</a>
                         </div>
                     </div>
                 </div>
