--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,12 @@
 <nav class="navbar navbar-expand-md navbar-light d-md-flex align-items-md-start flex-md-column p-2 pt-md-4"
   aria-expanded="false">
+
   <a routerLink="/dashboard" class="navbar-brand p-0 pl-2" href="">
     <img class="img-logo" alt="OS2IoT-logo" [src]="imagePath" />
   </a>
   <div *ngIf="!isLoggedIn(); else loggedInBlock" class="collapse navbar-collapse flex-grow-0" id="navbar">
     <ul class="navbar-nav flex-column mt-5">
-      <li class="nav-item py-2">
+      <li class="nav-item">
         <a routerLink="/auth" [routerLinkActive]="['active']" class="nav-link pl-5 position-relative rounded" id="auth">
           {{ 'NAV.LOGIN' | translate }}
         </a>
@@ -27,18 +28,18 @@
           <fa-icon [icon]="faUser" class="navbar-icon" style="margin-right: 1em; margin-left: 1em;"></fa-icon>
           {{getUsername()}}
         </div>
-        <div *ngIf="hasSomePermissions()" class="flex-column pb-5">
-          <li class="nav-item py-2">
+        <div *ngIf="hasSomePermissions()" class="flex-column mb-1">
+          <li class="nav-item">
             <app-global-admin></app-global-admin>
           </li>
-          <li class="nav-item py-2">
+          <li class="nav-item">
             <app-organisation-dropdown></app-organisation-dropdown>
           </li>
-          <li class="nav-item py-2">
+          <li class="nav-item">
             <ul class="navbar-nav flex-column">
               <p class="ml-2">{{'NAV.MENU-ITEM-MISC' | translate}}</p>
               <mat-divider></mat-divider>
-              <li class="nav-item py-2">
+              <li class="nav-item">
                 <a routerLink="/gateways" [routerLinkActive]="['active']"
                   class="nav-link pl-5 position-relative rounded" id="myLoraGateway">
                   {{ 'NAV.LORA-GATEWAYS' | translate }}
@@ -46,14 +47,14 @@
                 <fa-icon [icon]="faBroadcastTower" class="navbar-icon"></fa-icon>
 
               </li>
-              <li class="nav-item py-2">
+              <li class="nav-item">
                 <a routerLink="/profiles" [routerLinkActive]="['active']"
                   class="nav-link pl-5 position-relative rounded" id="profiles">
                   {{ 'NAV.PROFILES' | translate }}
                 </a>
                 <fa-icon [icon]="faSlidersH" class="navbar-icon"></fa-icon>
               </li>
-              <li class="nav-item py-2">
+              <li class="nav-item">
                 <a routerLink="/payload-decoder" [routerLinkActive]="['active']"
                   class="nav-link pl-5 position-relative rounded" id="payload-decoder">
                   {{ 'NAV.PAYLOAD-DECODER' | translate }}
@@ -64,12 +65,11 @@
           </li>
         </div>
         <div class="logout-btn">
-          <li class="nav-item py-2">
-            <a class="nav-link pl-5 position-relative rounded" href="https://os2iot.os2.eu/"
-              target="_blank">{{'NAV.HELP' | translate }}</a>
+          <li class="nav-item">
+            <a class="nav-link pl-5 position-relative rounded" href="https://os2iot.os2.eu/" target="_blank">{{'NAV.HELP' | translate }}</a>
             <fa-icon [icon]="faQuestionCircle" class="navbar-icon"></fa-icon>
           </li>
-          <li class="nav-item py-2">
+          <li class="nav-item">
             <a style="cursor: pointer;" class="nav-link pl-5 position-relative rounded" (click)="onLogout()"
               [attr.href]="getKombitLogoutUrl() ? getKombitLogoutUrl() : null"
               target="{{(isLoggedInWithKombit()) ? '_blank' : undefined}}">{{'NAV.LOGOUT' | translate }}</a>
