Open links on dashboard in new tab

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -32,13 +32,14 @@
                                 </div>
                                 <div class="col-md-6 px-md-4">
                                     <p><strong>{{'DASHBOARD.SUB-HEADER-1' | translate}}</strong></p>
-                                    <p>{{'DASHBOARD.WELCOME-MESSAGE' | translate}}<span><a
-                                                href="https://OS2iot.os2.eu">{{'DASHBOARD.LINK-1' |
+                                    <p>{{'DASHBOARD.WELCOME-MESSAGE' | translate}}<span><a href="https://OS2iot.os2.eu"
+                                                target="_blank">{{'DASHBOARD.LINK-1' |
                                                 translate}}</a></span>{{'DASHBOARD.WELCOME-MESSAGE-3' | translate}}
                                     </p>
                                     <p><strong>{{'DASHBOARD.SUB-HEADER-2' | translate}}</strong></p>
                                     <p>{{'DASHBOARD.WELCOME-MESSAGE-2' | translate}}<span><a
-                                                href="https://os2.eu/produkt/os2iot">{{'DASHBOARD.LINK-2' |
+                                                href="https://os2.eu/produkt/os2iot"
+                                                target="_blank">{{'DASHBOARD.LINK-2' |
                                                 translate}}</a></span>
                                     </p>
                                 </div>
