--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,8 +1,12 @@
+.logout-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  width: 100%;
+}
 
-.logout-btn{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: white;
-    width: 100%;
+.marginY {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
