Added message to prompt when attempting to delete application with existing devices. Cleaned code in a few files.

--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -24,7 +24,7 @@
             </td>
         </ng-container>
 
-        <!-- Location Column -->
+        <!-- Organization Column -->
         <ng-container matColumnDef="internalOrganizationName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.ORGANIZATION' | translate }}
             </th>
