--- a/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
+++ b/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
@@ -15,7 +15,7 @@
       </td>
     </ng-container>
 
-    <!-- Devices Column -->
+    <!-- Type Column -->
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
         {{ 'DATATARGET-TABLE.TYPE' | translate }}</th>
