Finalized CRUD in frontend. Removed list maps from datatarget and multicast because of change in requirements - now the multicast and datatarget is in a tab bar in the application detail page.

--- a/src/app/applications/multicast/multicast-detail/multicast-detail.component.html
+++ b/src/app/applications/multicast/multicast-detail/multicast-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="multicast">
-    <app-top-bar [title]="multicast.groupName" [data]="multicast" [backButton]="backButton" [subPage]="true" [addDetailDowndown]="true"
-      [dropDownButton]="dropdownButton" (deleteSelectedInDropdown)="onDeleteDatatarget()"></app-top-bar>
+    <app-top-bar [data]="multicast" [backButton]="backButton" [subPage]="true" [addDetailDowndown]="true"
+      [dropDownButton]="dropdownButton" (deleteSelectedInDropdown)="onDeleteMulticast()"></app-top-bar>
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12">
@@ -8,12 +8,12 @@
             <h3>{{ 'MULTICAST.DETAILS' | translate }}</h3>
             <app-general-details [data]="multicast"></app-general-details>
             <mat-divider></mat-divider>
-            <p><strong>{{ 'MULTICAST.GROUPNAME' | translate }}</strong>{{multicast.groupName | translate }}</p>
-            <p><strong>{{ 'MULTICAST.ADDRESS' | translate }}</strong>{{multicast.address | translate}}</p>
-            <p><strong>{{ 'MULTICAST.NETWORK-KEY' | translate }}</strong>{{multicast.networkSessionKey | translate}}</p>
-            <p><strong>{{ 'MULTICAST.APPLICATION-KEY' | translate }}</strong>{{multicast.applicationSessionKey | translate}}</p>
-            <p><strong>{{ 'MULTICAST.FRAMECOUNTER' | translate }}</strong>{{multicast.frameCounter}}</p>
-            <p><strong>{{ 'MULTICAST.DATARATE' | translate }}</strong>{{multicast.dataRate}}</p>
+            <p><strong>{{ 'MULTICAST.GROUPNAME' | translate }}</strong>{{multicast.name | translate }}</p>
+            <p><strong>{{ 'MULTICAST.ADDRESS' | translate }}</strong>{{multicast.mcAddr | translate}}</p>
+            <p><strong>{{ 'MULTICAST.NETWORK-KEY' | translate }}</strong>{{multicast.mcNwkSKey | translate}}</p>
+            <p><strong>{{ 'MULTICAST.APPLICATION-KEY' | translate }}</strong>{{multicast.mcAppSKey | translate}}</p>
+            <p><strong>{{ 'MULTICAST.FRAMECOUNTER' | translate }}</strong>{{multicast.fCnt}}</p>
+            <p><strong>{{ 'MULTICAST.DATARATE' | translate }}</strong>{{multicast.dr}}</p>
             <p><strong>{{ 'MULTICAST.FREQUENCY' | translate }}</strong>{{multicast.frequency}}</p>
             <p><strong>{{ 'MULTICAST.GROUPTYPE' | translate }}</strong>{{multicast.groupType}}</p>
             <!-- <p *ngIf="canShowPeriodicity()"><strong>{{ 'MULTICAST.PERIODICITY' | translate }}</strong>{{multicast.periodicity}}</p> Only if classB can be used--> 
