--- a/src/app/applications/multicast/multicast-table/multicast-table.component.html
+++ b/src/app/applications/multicast/multicast-table/multicast-table.component.html
@@ -10,7 +10,7 @@
           {{ 'MULTICAST-TABLE.NAME' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          <a [routerLink]="['multicast', element.multicastId]" routerLinkActive="active"
+          <a [routerLink]="['multicast', element.id]" routerLinkActive="active"
             class="application-link">{{element.groupName}}</a>
         </td>
       </ng-container>
@@ -21,7 +21,7 @@
           {{ 'MULTICAST-TABLE.TYPE' | translate }}</th>
         <td mat-cell *matCellDef="let element">
   
-          {{element.groupType | translate}}</td>
+          {{element.lorawanMulticastDefinition.groupType | translate}}</td>
       </ng-container>
   
       <!-- Options Column -->
@@ -29,12 +29,12 @@
         <th mat-header-cell *matHeaderCellDef class="col-1"></th>
         <td mat-cell *matCellDef="let element">
           <div class="dropdown" *ngIf="canEdit">
-            <a href="#" role="button" id="tableRowDropdown-{{element.multicastId}}" class="applicationRow__edit dropdown-toggle"
+            <a href="#" role="button" id="tableRowDropdown-{{element.id}}" class="applicationRow__edit dropdown-toggle"
               data-toggle="dropdown" aria-expanded="false"
               [attr.aria-label]="'MULTICAST-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-            <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.multicastId}}">
+            <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
               <li class="dropdown-item">
-                <a [routerLink]="['multicast-edit', element.multicastId]"
+                <a [routerLink]="['multicast-edit', element.id]"
                   routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
               </li>
               <li class="dropdown-item">
